--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
   "dependencies": {
     "@koa/router": "^8.0.1",
     "@types/koa": "^2.0.49",
+    "@types/koa-send": "^4.1.2",
     "@types/koa__router": "^8.0.0",
     "@types/node": "^12.7.5",
     "@types/signale": "^1.2.1",
     "koa": "^2.8.1",
     "koa-body": "^4.1.1",
+    "koa-send": "^5.0.0",
     "signale": "^1.4.0",
     "typescript": "^3.6.3"
   },
