--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   },
   "dependencies": {
     "@koa/router": "^8.0.1",
+    "@types/http-errors": "^1.6.2",
     "@types/koa": "^2.0.49",
     "@types/koa-send": "^4.1.2",
     "@types/koa__router": "^8.0.0",
     "@types/node": "^12.7.5",
     "@types/signale": "^1.2.1",
+    "http-errors": "^1.7.3",
     "koa": "^2.8.1",
     "koa-body": "^4.1.1",
     "koa-send": "^5.0.0",
