--- a/package.json
+++ b/package.json
@@ -16,15 +16,19 @@
   "dependencies": {
     "@koa/router": "^8.0.1",
     "@types/http-errors": "^1.6.2",
+    "@types/ioredis": "^4.0.17",
     "@types/koa": "^2.0.49",
     "@types/koa-send": "^4.1.2",
+    "@types/koa-session": "^5.10.1",
     "@types/koa__router": "^8.0.0",
     "@types/node": "^12.7.5",
     "@types/signale": "^1.2.1",
     "http-errors": "^1.7.3",
+    "ioredis": "^4.14.1",
     "koa": "^2.8.1",
     "koa-body": "^4.1.1",
     "koa-send": "^5.0.0",
+    "koa-session": "^5.12.3",
     "signale": "^1.4.0",
     "typescript": "^3.6.3"
   },
