--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@koa/router": "^8.0.1",
     "@types/koa": "^2.0.49",
     "@types/koa__router": "^8.0.0",
+    "@types/mime-types": "^2.1.0",
     "@types/node": "^12.7.5",
     "@types/signale": "^1.2.1",
     "koa": "^2.8.1",
     "koa-session": "^5.12.3",
+    "mime-types": "^2.1.24",
     "signale": "^1.4.0",
     "typescript": "^3.6.3"
   },
